# pytest-cocotb

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml  sourceme
.github/workflows/: docs.yml
docs/: Makefile
docs/source/: conf.py  developing.rst  examples.rst  hpc.rst  index.rst  nfs.rst  plugin.rst  quickstart.rst
src/pytest_cocotb/: __init__.py  guard.py  mixin.py  nfs_lock.py  plugin.py  runners.py  session.py
tests/: conftest.py  test_guard.py  test_nfs_lock.py  test_plugin.py
tests/e2e/: cocotb_counter.py  conftest.py  test_counter.py
tests/e2e/rtl/: counter.sv
